syntax = "proto3";
import "v2/common/common.proto";
package hcore;

option go_package = "github.com/hiddify/hiddify-core/v2/hcore";
import "v2/hcore/hcore.proto";

service Core {
  rpc Start (StartRequest) returns (CoreInfoResponse);
  rpc CoreInfoListener (common.Empty) returns (stream CoreInfoResponse);
  rpc OutboundsInfo (common.Empty) returns (stream OutboundGroupList);
  rpc MainOutboundsInfo (common.Empty) returns (stream OutboundGroupList);
  rpc GetSystemInfo (common.Empty) returns (stream SystemInfo);
  rpc Setup (SetupRequest) returns (common.Response);
  rpc Parse (ParseRequest) returns (ParseResponse);
  rpc ChangeHiddifySettings (ChangeHiddifySettingsRequest) returns (CoreInfoResponse);
  //rpc GenerateConfig (GenerateConfigRequest) returns (GenerateConfigResponse);
  rpc StartService (StartRequest) returns (CoreInfoResponse);
  rpc Stop (common.Empty) returns (CoreInfoResponse);
  rpc Restart (StartRequest) returns (CoreInfoResponse);
  rpc SelectOutbound (SelectOutboundRequest) returns (common.Response);
  rpc UrlTest (UrlTestRequest) returns (common.Response);
  rpc GenerateWarpConfig (GenerateWarpConfigRequest) returns (WarpGenerationResponse);
  rpc GetSystemProxyStatus (common.Empty) returns (SystemProxyStatus);
  rpc SetSystemProxyEnabled (SetSystemProxyEnabledRequest) returns (common.Response);
  rpc LogListener (common.Empty) returns (stream LogMessage); 
}


